--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <script>
+        console.log(' i am working')
+    </script>
     <h1>Hello world!!!</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo officia vero labore perferendis eos doloribus eligendi distinctio facere a soluta eveniet odio numquam, quod, nihil, corrupti consequuntur obcaecati quam nesciunt.</p>
 </body>
