--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        console.log(' i am working')
+        console.log(' i am working',a)
     </script>
     <h1>Hello world!!!</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo officia vero labore perferendis eos doloribus eligendi distinctio facere a soluta eveniet odio numquam, quod, nihil, corrupti consequuntur obcaecati quam nesciunt.</p>
