--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 </head>
 <body>
     <script>
-        console.log(' i am working',a)
+        function fun(){
+        console.log(' i am working')
+        }
     </script>
     <h1>Hello world!!!</h1>
+    <button onclick="fun()">test</button>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo officia vero labore perferendis eos doloribus eligendi distinctio facere a soluta eveniet odio numquam, quod, nihil, corrupti consequuntur obcaecati quam nesciunt.</p>
 </body>
 </html>
